compiler/typ/tests/fixtures/diagnostics/0400_external_identity_use_mismatch_10.ml.infer.expected
File "0400_external_identity_use_mismatch_10.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0400_external_identity_use_mismatch_10 is not a valid module name.

File "0400_external_identity_use_mismatch_10.ml", line 2, characters 17-21:
2 | let _ = id_kappa true
                     ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
