compiler/typ/tests/fixtures/diagnostics/0400_external_identity_use_mismatch_10.ml
external id_kappa : int -> int = "%identity"
let _ = id_kappa true
